--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: Regular;
+  src: url(fonts/Regular.ttf);
+}
+
+@font-face {
+  font-family: Semibold;
+  src: url(fonts/Semibold.otf);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +18,177 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#parallax {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url(./images/layer1.png), url(./images/layer2.png), url(./images/layer3.png);
+  background-repeat: no-repeat;
+  background-size: 95%;
+  background-position: center;
+
+}
+h1 {
+  color: #fff;
+  font-size: 45px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0px;
+  font-family: Regular;
+}
+
+h2 {
+  color: #fff;
+  font-family: Semibold;
+  font-weight: normal;
+  font-size: 45px;
+  text-align: center;
+  margin: 0px;
+}
+
+h3 {
+  color: #fff;
+  font-family: Semibold;
+  font-weight: normal;
+  font-size: 40px;
+  text-align: center;
+  margin: 0px;
+}
+
+.header {
+  padding-top: 0px;
+
+}
+
+.title {
+  padding-top: 70vh;
+}
+
+.navbar {
+  padding-top: 20px;
+  padding-left: 30px;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(30px);
+  position: fixed; /* Set the navbar to fixed position */
+  overflow: hidden;
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%;
+}
+
+.logo {
+  float: left;
+  display: block;
+}
+
+.navbar a {
+  float: right;
+  display: block;
+  color: white;
+  background-color: #6EC3F4;
+  text-align: center;
+  padding: 14px 16px;
+  margin-right: 50px;
+  margin-top: 15px;
+  text-decoration: none;
+  font-family: Regular;
+}
+
+.navbar a:hover {
+  background-color: #7038FF;
+}
+
+.text {
+  align-content: center;
+  color:white;
+  text-align: center;
+  margin-right: 30vw;
+  margin-left: 30vw;
+}
+
+.text p{
+  font-size: 16px;
+  font-family: Regular;
+
+}
+
+.works{
+  align-content: center;
+  color:white;
+  text-align: center;
+  margin-right: 30vw;
+  margin-left: 30vw;
+  margin-top: 20vh;
+}
+
+.works img{
+  margin-top: 50px;
+  width: 40vw;
+}
+
+.works p{
+  margin-top: 70px;
+  font-size: 16px;
+  font-family: Regular;
+
+}
+
+.services{
+  align-content: center;
+  color:white;
+  text-align: center;
+  margin-right: 10vw;
+  margin-left: 10vw;
+  margin-top: 20vh;
+}
+
+.services img{
+  margin-top: 50px;
+  width: 12vw;
+}
+
+.services p{
+  margin-top: 20px;
+  font-size: 16px;
+  font-family: Regular;
+  margin-left: 1vw;
+  margin-right: 1vw;
+
+}
+
+.ready{
+  align-content: center;
+  color:white;
+  text-align: center;
+  margin-right: 30vw;
+  margin-left: 30vw;
+  margin-top: 20vh;
+  margin-bottom: 20vh;
+
+}
+
+.ready a {
+  display: inline-block;
+  color: white;
+  background-color: #6EC3F4;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: Regular;
+}
+
+.ready a:hover {
+  background-color: #7038FF;
+}
+
+.ready h3 {
+  display: inline-block;
+  color: #fff;
+  font-family: Semibold;
+  font-weight: normal;
+  font-size: 40px;
+  text-align: center;
+  margin: 0px;
+  margin-right: 20px;
 }
