--- a/front/src/slider.css
+++ b/front/src/slider.css
@@ -12,7 +12,7 @@
   position: relative;
   height: 14px;
   padding: 5px 0;
-  width: 500px;
+  width: 100%;
   border-radius: 0px;
   touch-action: none;
   box-sizing: border-box;
