--- a/front/src/App.css
+++ b/front/src/App.css
@@ -40,9 +40,11 @@
 #rotatedDiv {
   transform-origin:top left;
   transform: rotate(90deg);
-  margin-left: 61vw;
-  overflow: hidden;
+  margin-left: 91%;
+  overflow: visible;
   position : relative; bottom:0;
+  height: 60%;
+  
 }
 
 /* Custom player style */
@@ -50,10 +52,10 @@
   display: block;
   width: inherit;
   border: 2px;
-  margin: 4px;
+  margin: 8px;
   margin-bottom: 0;
   margin-top: 5%;
-  width: 1055px;
+  width: 90vw;
 }
 #section3 midi-player::part(control-panel) {
   background: #ffffff;
@@ -86,10 +88,8 @@
   border-radius: 0 0 10px 10px;
   margin: 4px;
   margin-top:1%;
-  overflow: visible;
-  width: 60vw;
+  width: 90vw;
   height: 60vw;
-  
 }
 #section3 midi-visualizer svg rect.note {
   opacity: 0.9;
@@ -100,7 +100,7 @@
   stroke: rgb(70, 7, 7);
 }
 #section3 midi-visualizer svg rect.note[data-instrument="2"]{
-  fill: rgb(86, 217, 250);
+  fill: rgb(21, 93, 228);
   stroke: rgb(22, 73, 73);
 }
 #section3 midi-visualizer svg rect.note[data-is-drum="true"]{
